# chainfile

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md
.github/: pull_request_template.md
.github/workflows/: CI.yml  comparison.yml
benches/: end_to_end.rs  liftover.rs  machine.rs  support.rs
examples/: chain_check.rs  chain_count.rs  chain_interrogate.rs  chain_sections.rs  chain_stepthrough.rs  chain_view.rs  liftover.rs
src/: alignment.rs  core.rs  lib.rs  liftover.rs  line.rs  reader.rs  record.rs
src/alignment/: section.rs
src/alignment/section/: builder.rs  data.rs  header.rs  sections.rs
src/alignment/section/data/: record.rs
src/alignment/section/header/: sequence.rs
src/core/: coordinate.rs  interval.rs  strand.rs
src/core/coordinate/: position.rs
src/liftover/: machine.rs  stepthrough.rs
src/liftover/machine/: builder.rs
src/liftover/stepthrough/: interval_pair.rs
src/reader/: section.rs
src/record/: alignment_data.rs  header.rs
src/record/header/: sequence.rs  strand.rs
