[package]
authors = ["Clay McLeod <clay.l.mcleod@gmail.com>"]
edition = "2021"
license = "Apache-2.0/MIT"
name = "chainfile"
rust-version = "1.72.0"
publish = true
description = "A crate for working with genomics chain files."
homepage = "https://github.com/stjude-rust-labs/chainfile"
repository = "https://github.com/stjude-rust-labs/chainfile"
documentation = "https://docs.rs/chainfile"
version = "0.2.0"

[dev-dependencies]
flate2 = "1.0.25"
noodles = { version = "0.35.0", features = ["core", "fasta"] }

[dependencies]
rust-lapper = "1.1.0"
